# Strelka

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  install.bat  install.sh
.github/workflows/: build.yml
app/: main.cpp
cmake/: Warnings.cmake
include/: shaders.h
include/hdNeVK/: RendererPlugin.h
include/hdOka/: RendererPlugin.h
include/materialmanager/: materialmanager.h  mdlHlslCodeGen.h  mdlLogger.h  mdlMaterialCompiler.h  mdlNeurayLoader.h  mdlRuntime.h  mtlxMdlCodeGen.h
include/modelloader/: Vertex.h  modelloader.h
include/render/: accumulation.h  aopass.h  bilateralfilter.h  bvh.h  common.h  composition.h  computepass.h  debugUtils.h  debugview.h  depthpass.h  finalpass.h  gbuffer.h  gbufferpass.h  glfwrender.h  ltcpass.h  pathtracer.h  ptrender.h  reduction.h  reflection.h  render.h  renderpass.h  rtshadowpass.h  shaderparameters.h  shadowpass.h  tonemap.h  upscalepass.h  vertex.h  vkrender.h
include/render/renderpass/: fullscreenpass.h  geometry.h  renderpass.h  taa.h
include/resourcemanager/: resourcemanager.h
include/scene/: camera.h  glm-wrapper.hpp  scene.h
include/settings/: settings.h
include/shadermanager/: ShaderManager.h
include/texturemanager/: texturemanager.h
include/ui/: test1.h  ui.h  window.h
lib/: glew32s.lib
misc/: CornellBox-Sphere.mtl  CubeScene.mtl  cube.mtl  diamonds.mtl
misc/Cube/: Cube.gltf
misc/shaders/: default.frs  default.vs
misc/test_data/: README.md  cube.mtl
misc/test_data/2triangles/: trianglesDef.gltf
misc/test_data/cube/: Cube.gltf
misc/test_data/emissiveLight/: trianglesEmL.gltf
misc/test_data/mdl/: brushed_antique_copper.mdl
misc/test_data/mtlx/: standard_surface_greysphere_calibration.mtlx  standard_surface_wood_tiled.mtlx
misc/test_data/parallelPlanes/: planesDef.gltf
misc/test_data/parallelTriangles/: parallelTriangles.gltf
misc/test_data/transparencyTest/: glassLens.usda
misc/test_data/veachMisTest/: misTest.usda
scripts/: README.md  miscLoader.py  miscLoader.sh  perfTest.py  requirements.txt 
shaders/: CMakeLists.txt  ShaderManager.cpp  ShaderManager.h  ThreadGroupTilingX.h  accumulation.hlsl  accumulationparam.h  ao.hlsl  aopassparam.h  bilateralfilter.hlsl  bilateralparam.h  bindless.h  composition.hlsl  compositionparam.h  compute.hlsl  debugview.hlsl  debugviewparam.h  fullscreen.hlsl  gbuffer.hlsl  geometry.hlsl  helper.h  instanceconstants.h  lights.h  ltc.hlsl  ltcparam.h  materials.h  mdl_runtime.hlsl  mdl_types.hlsl  newPT.hlsl  pack.h  pathtracer.hlsl  pathtracerMdl.hlsl  pathtracerparam.h  pbr.hlsl  random.h  ray.h  raytracing.h  reduction.hlsl  reflection.hlsl  reflectionparam.h  rtshadowparam.h  (+10 more)
shaders/src/: shaders1.slang
shaders/test/: mdl_runtime.hlsl  test_comp_shader.hlsl  test_shader.hlsl
src/: common.h  engine.cpp  engine.h  main.cpp  shaders.cpp
src/core/: device.cpp  device.h  instance.cpp  instance.h
src/hdNeVK/: Camera.cpp  Camera.h  Instancer.cpp  Instancer.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialNetworkTranslator.cpp  MaterialNetworkTranslator.h  MdlDiscoveryPlugin.cpp  MdlDiscoveryPlugin.h  MdlParserPlugin.cpp  MdlParserPlugin.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  RenderDelegate.cpp  RenderDelegate.h  RenderParam.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp  Tokens.cpp  Tokens.h  plugInfo.json.in
src/hdOka/: Camera.cpp  Camera.h  Instancer.cpp  Instancer.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialNetworkTranslator.cpp  MdlDiscoveryPlugin.cpp  MdlDiscoveryPlugin.h  MdlParserPlugin.cpp  MdlParserPlugin.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  RenderDelegate.cpp  RenderDelegate.h  RenderParam.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp  Tokens.cpp  Tokens.h  plugInfo.json.in
src/hdRunner/: SimpleRenderTask.cpp  main.cpp
src/hdStrelka/: BasisCurves.cpp  BasisCurves.h  Camera.cpp  Instancer.cpp  Instancer.h  Light.cpp  Material.cpp  Material.h  MaterialNetworkTranslator.cpp  MaterialNetworkTranslator.h  MdlParserPlugin.cpp  MdlParserPlugin.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  RenderDelegate.cpp  RenderDelegate.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp
src/materialmanager/: materialmanager.cpp  mdlHlslCodeGen.cpp  mdlLogger.cpp  mdlMaterialCompiler.cpp  mdlNeurayLoader.cpp  mdlRuntime.cpp  mtlxMdlCodeGen.cpp
src/modelloader/: modelloader.cpp
src/render/: accumulation.cpp  aopass.cpp  bilateralfilter.cpp  bvh.cpp  composition.cpp  computepass.cpp  debugUtils.cpp  debugview.cpp  depthpass.cpp  finalpass.cpp  gbufferpass.cpp  glfwrender.cpp  ltc_data.h  ltcpass.cpp  pathtracer.cpp  ptrender.cpp  reduction.cpp  reflection.cpp  render.cpp  renderpass.cpp  rtshadowpass.cpp  shaderparameters.cpp  shadowpass.cpp  tonemap.cpp  upscalepass.cpp  vkrender.cpp
src/render/renderpass/: fullscreen.cpp  fullscreenpass.cpp  geometry.cpp  renderpass.cpp  taa.cpp
src/resourcemanager/: resourcemanager.cpp
src/scene/: camera.cpp  scene.cpp  scene.h
src/settings/: settings.cpp
src/shadermanager/: ShaderManager.cpp
src/texturemanager/: texturemanager.cpp
src/ui/: test1.cpp  ui.cpp  window.cpp
src/сamera/: camera.cpp  camera.h
tests/: CMakeLists.txt
tests/intersection/: aabb.cpp
tests/materialmanager/: test_materialmanager.cpp
tests/modelloader/: test_model.cpp
tests/modelloader/testmisc/: cube.mtl
tests/render/: tests_render.cpp
tests/scene/: tests_scene.cpp
tests/shadermanager/: tests_shadermanager.cpp
tests/ui/: tests_ui.cpp
